<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:menu="@menu/playlist_editor_menu"
        app:navigationContentDescription="@string/playlist_editor_dialog_negative_button"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/playlist_editor_dialog_title" />

    <TextView
        style="@style/LabelSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/playlist_editor_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_song_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/global_padding_bottom" />
</LinearLayout>
